@@ -14,117 +14,157 @@
  * limitations under the License.
  */
 
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import java.io.File
-import java.util.Properties
-import kotlin.coroutines.experimental.EmptyCoroutineContext.plus
+import java.util.*
 
 plugins {
-    groovy
-    `java-gradle-plugin`
-    `kotlin-dsl`
-    idea
-    eclipse
+    `java`
+    `kotlin-dsl` apply false
+    id("org.gradle.kotlin-dsl.ktlint-convention") version "0.4.1" apply false
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+subprojects {
+    if (name != "buildPlatform") {
+        apply(plugin = "java-library")
+
+
+        if (file("src/main/groovy").isDirectory || file("src/test/groovy").isDirectory) {
+            applyGroovyProjectConventions()
+        }
+
+        if (file("src/main/kotlin").isDirectory || file("src/test/kotlin").isDirectory) {
+            applyKotlinProjectConventions()
+        }
+
+        java {
+            sourceCompatibility = JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
+        }
+
+        dependencies {
+            "api"(platform(project(":buildPlatform")))
+            implementation(gradleApi())
+        }
+
+        afterEvaluate {
+            if (tasks.withType<ValidatePlugins>().isEmpty()) {
+                val validatePlugins by tasks.registering(ValidatePlugins::class) {
+                    outputFile.set(project.reporting.baseDirectory.file("task-properties/report.txt"))
+
+                    val mainSourceSet = project.sourceSets.main.get()
+                    classes.setFrom(mainSourceSet.output.classesDirs)
+                    dependsOn(mainSourceSet.output)
+                    classpath.setFrom(mainSourceSet.runtimeClasspath)
+                }
+                tasks.check { dependsOn(validatePlugins) }
+            }
+        }
+
+        tasks.withType<ValidatePlugins> {
+            failOnWarning.set(true)
+            enableStricterValidation.set(true)
+        }
+
+        apply(from = "../../../gradle/shared-with-buildSrc/code-quality-configuration.gradle.kts")
+    }
+    apply(plugin = "eclipse")
 }
 
-gradlePlugin {
-    (plugins) {
-        "classycle" {
-            id = "classycle"
-            implementationClass = "org.gradle.plugins.classycle.ClassyclePlugin"
+allprojects {
+    repositories {
+        maven {
+            name = "Gradle libs"
+            url = uri("https://repo.gradle.org/gradle/libs")
+            mavenContent {
+                // This repository contains an older version which has been overwritten in Central
+                excludeModule("com.google.j2objc", "j2objc-annotations")
+            }
         }
-        "testFixtures" {
-            id = "test-fixtures"
-            implementationClass = "org.gradle.plugins.testfixtures.TestFixturesPlugin"
+        gradlePluginPortal()
+        maven {
+            name = "Gradle snapshot libs"
+            url = uri("https://repo.gradle.org/gradle/libs-snapshots")
+            mavenContent {
+                // This repository contains an older version which has been overwritten in Central
+                excludeModule("com.google.j2objc", "j2objc-annotations")
+            }
         }
-        "strictCompile" {
-            id = "strict-compile"
-            implementationClass = "org.gradle.plugins.strictcompile.StrictCompilePlugin"
+        maven {
+            name = "kotlinx"
+            url = uri("https://dl.bintray.com/kotlin/kotlinx")
         }
-        "jsoup" {
-            id = "jsoup"
-            implementationClass = "org.gradle.plugins.jsoup.JsoupPlugin"
-        }
-        "buildTypes" {
-            id = "build-types"
-            implementationClass = "org.gradle.plugins.buildtypes.BuildTypesPlugin"
-        }
-        "pegdown" {
-            id = "pegdown"
-            implementationClass = "org.gradle.plugins.pegdown.PegDownPlugin"
+        maven {
+            name = "kotlin-dev"
+            url = uri("https://dl.bintray.com/kotlin/kotlin-dev")
         }
     }
-}
-
-repositories {
-    maven { url = uri("https://repo.gradle.org/gradle/libs-releases") }
-    maven { url = uri("https://repo.gradle.org/gradle/libs-snapshots") }
-    gradlePluginPortal()
 }
 
 dependencies {
-    compile("org.ow2.asm:asm:6.0")
-    compile("org.ow2.asm:asm-commons:6.0")
-    compile(gradleApi())
-    compile("com.google.guava:guava-jdk5:14.0.1")
-    compile("commons-lang:commons-lang:2.6")
-    compile(localGroovy())
-    compile("org.codehaus.groovy.modules.http-builder:http-builder:0.7.2")
-    testCompile("junit:junit:4.12")
-    testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
-    testCompile("cglib:cglib-nodep:3.2.5")
-    testCompile("org.objenesis:objenesis:2.4")
-    testCompile("org.hamcrest:hamcrest-core:1.3")
-
-    compile("org.pegdown:pegdown:1.6.0")
-    compile("org.jsoup:jsoup:1.6.3")
-    compile("me.champeau.gradle:japicmp-gradle-plugin:0.2.4")
-    compile("org.asciidoctor:asciidoctor-gradle-plugin:1.5.6")
-    compile("com.github.javaparser:javaparser-core:2.4.0")
-
-    constraints {
-        compile("org.codehaus.groovy:groovy-all:2.4.12")
+    subprojects.forEach {
+        if (it.name != "buildPlatform") {
+            runtimeOnly(project(it.path))
+        }
     }
+}
 
-    components {
-        withModule("net.sourceforge.nekohtml:nekohtml") {
-            allVariants {
-                // Xerces on the runtime classpath is breaking some of our doc tasks
-                withDependencies { removeAll { it.group == "xerces" } }
+
+// TODO Avoid duplication of what defines a CI Server with BuildEnvironment
+val isCiServer: Boolean by extra { "CI" in System.getenv() }
+
+
+/**
+ * Controls whether verification tasks are skipped.
+ *
+ * Set the `buildSrcCheck` Gradle property to `true` to run the verification tasks.
+ * Set it to `false` to skip the verification tasks.
+ *
+ * When that property is unset, defaults to `false` on CI, to `true` otherwise.
+ */
+val isSkipBuildSrcVerification: Boolean =
+    (findProperty("buildSrcCheck") as String?)
+        ?.let { it == "false" }
+        ?: !isCiServer
+
+if (isSkipBuildSrcVerification) {
+    allprojects {
+        afterEvaluate {
+            plugins.withId("lifecycle-base") {
+                tasks.named("check") {
+                    setDependsOn(listOf("assemble"))
+                }
             }
         }
     }
 }
 
-// Allow Kotlin types to reference both Java and Groovy types
-// Remove compileGroovy -> compileJava dependency added by GroovyBasePlugin
-// Prevent cycles in the task graph as compileJava depends on compileKotlin
-tasks {
-    val compileGroovy by getting(GroovyCompile::class) {
-        dependsOn.remove("compileJava")
+if (isCiServer) {
+    gradle.buildFinished {
+        allprojects.forEach { project ->
+            project.tasks.all {
+                if (this is Reporting<*> && state.failure != null) {
+                    prepareReportForCIPublishing(project.name, this.reports["html"].destination)
+                }
+            }
+        }
     }
-    "compileKotlin"(KotlinCompile::class) {
-        classpath += files(compileGroovy.destinationDir).builtBy(compileGroovy)
+}
+
+fun Project.prepareReportForCIPublishing(projectName: String, report: File) {
+    if (report.isDirectory) {
+        val destFile = File("${rootProject.buildDir}/report-$projectName-${report.name}.zip")
+        ant.withGroovyBuilder {
+            "zip"("destFile" to destFile) {
+                "fileset"("dir" to report)
+            }
+        }
+    } else {
+        copy {
+            from(report)
+            into(rootProject.buildDir)
+            rename { "report-$projectName-${report.parentFile.name}-${report.name}" }
+        }
     }
 }
-
-val isCiServer: Boolean by extra { System.getenv().containsKey("CI") }
-
-apply {
-    from("../gradle/compile.gradle")
-}
-
-if (!isCiServer || System.getProperty("enableCodeQuality")?.toLowerCase() == "true") {
-    apply { from("../gradle/dependencies.gradle") }
-    apply { from("../gradle/codeQuality.gradle") }
-}
-
-apply { from("../gradle/ciReporting.gradle") }
 
 fun readProperties(propertiesFile: File) = Properties().apply {
     propertiesFile.inputStream().use { fis ->
@@ -132,29 +172,84 @@ fun readProperties(propertiesFile: File) = Properties().apply {
     }
 }
 
-// Workaround caching problems with 'java-gradle-plugin'
-// vvvvv
-normalization {
-    runtimeClasspath {
-        ignore("plugin-under-test-metadata.properties")
+val checkSameDaemonArgs by tasks.registering {
+    doLast {
+        val buildSrcProperties = readProperties(File(project.rootDir, "gradle.properties"))
+        val rootProperties = readProperties(File(project.rootDir, "../gradle.properties"))
+        val jvmArgs = listOf(buildSrcProperties, rootProperties).map { it.getProperty("org.gradle.jvmargs") }.toSet()
+        if (jvmArgs.size > 1) {
+            throw GradleException("gradle.properties and buildSrc/gradle.properties have different org.gradle.jvmargs " +
+                "which may cause two daemons to be spawned on CI and in IDEA. " +
+                "Use the same org.gradle.jvmargs for both builds.")
+        }
     }
 }
-// ^^^^^
 
-tasks {
-    val checkSameDaemonArgs by creating {
-        doLast {
-            val buildSrcProperties = readProperties(File(project.rootDir, "gradle.properties"))
-            val rootProperties = readProperties(File(project.rootDir, "../gradle.properties"))
-            val jvmArgs = listOf(buildSrcProperties, rootProperties).map { it.getProperty("org.gradle.jvmargs") }.toSet()
-            if (jvmArgs.size > 1) {
-                throw GradleException("gradle.properties and buildSrc/gradle.properties have different org.gradle.jvmargs " +
-                    "which may cause two daemons to be spawned on CI and in IDEA. " +
-                    "Use the same org.gradle.jvmargs for both builds.")
-            }
+tasks.build { dependsOn(checkSameDaemonArgs) }
+
+fun Project.applyGroovyProjectConventions() {
+    apply(plugin = "java-gradle-plugin")
+    apply(plugin = "groovy")
+
+    dependencies {
+        implementation(localGroovy())
+        testImplementation("org.spockframework:spock-core:1.3-groovy-2.5") {
+            exclude(group = "org.codehaus.groovy")
+        }
+        testImplementation("net.bytebuddy:byte-buddy:1.8.21")
+        testImplementation("org.objenesis:objenesis:2.6")
+    }
+
+    tasks.withType<GroovyCompile>().configureEach {
+        groovyOptions.apply {
+            encoding = "utf-8"
+        }
+        options.apply {
+            isFork = true
+            encoding = "utf-8"
+            compilerArgs = mutableListOf("-Xlint:-options", "-Xlint:-path")
+        }
+        val vendor = System.getProperty("java.vendor")
+        inputs.property("javaInstallation", "$vendor ${JavaVersion.current()}")
+    }
+
+    tasks.withType<Test>().configureEach {
+        if (JavaVersion.current().isJava9Compatible) {
+            //allow ProjectBuilder to inject legacy types into the system classloader
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+            jvmArgs("--illegal-access=deny")
         }
     }
 
-    val build by getting
-    build.dependsOn(checkSameDaemonArgs)
+    val compileGroovy by tasks.existing(GroovyCompile::class)
+
+    configurations {
+        apiElements {
+            outgoing.variants["classes"].artifact(
+                mapOf(
+                    "file" to compileGroovy.get().destinationDir,
+                    "type" to ArtifactTypeDefinition.JVM_CLASS_DIRECTORY,
+                    "builtBy" to compileGroovy
+                ))
+        }
+    }
 }
+
+fun Project.applyKotlinProjectConventions() {
+    apply(plugin = "org.gradle.kotlin.kotlin-dsl")
+    apply(plugin = "org.gradle.kotlin-dsl.ktlint-convention")
+
+    plugins.withType<KotlinDslPlugin> {
+        configure<KotlinDslPluginOptions> {
+            experimentalWarning.set(false)
+        }
+    }
+
+    configure<org.jlleitschuh.gradle.ktlint.KtlintExtension> {
+        // TODO:kotlin-dsl remove precompiled script plugins accessors exclusion from ktlint checks
+        filter {
+            exclude("gradle/kotlin/dsl/accessors/_*/**")
+        }
+    }
+}
+
